{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 74,
  "lineage": "ef910ca5-b2b9-952a-101a-b56cfbe8f6e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:internet-gateway/igw-013fcf39583478dcd",
            "id": "igw-013fcf39583478dcd",
            "owner_id": "147876441483",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-09a593fff122fb81c"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myprivatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:route-table/rtb-011bcc820bf603e23",
            "id": "rtb-011bcc820bf603e23",
            "owner_id": "147876441483",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "myprivateroutetable"
            },
            "tags_all": {
              "Name": "myprivateroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a593fff122fb81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mypublicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:route-table/rtb-05a3413f6566ad1e3",
            "id": "rtb-05a3413f6566ad1e3",
            "owner_id": "147876441483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013fcf39583478dcd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypublicroutetable"
            },
            "tags_all": {
              "Name": "mypublicroutetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a593fff122fb81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053aa73a822a2cf72",
            "route_table_id": "rtb-011bcc820bf603e23",
            "subnet_id": "subnet-0e7af5f87cf25411d"
          },
          "dependencies": [
            "aws_route_table.myprivatert",
            "aws_subnet.private_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b388a35501f9ad43",
            "route_table_id": "rtb-05a3413f6566ad1e3",
            "subnet_id": "subnet-0d2a3292c4f5c1084"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.mypublicrt",
            "aws_subnet.public_subnet",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:subnet/subnet-0e7af5f87cf25411d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7af5f87cf25411d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147876441483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myprivatesubnet"
            },
            "tags_all": {
              "Name": "myprivatesubnet"
            },
            "vpc_id": "vpc-09a593fff122fb81c"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:subnet/subnet-0d2a3292c4f5c1084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2a3292c4f5c1084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "147876441483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mypublicsubnet"
            },
            "tags_all": {
              "Name": "mypublicsubnet"
            },
            "vpc_id": "vpc-09a593fff122fb81c"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:147876441483:vpc/vpc-09a593fff122fb81c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ccd743bdc2be6bb",
            "default_route_table_id": "rtb-081f3180a27ecf382",
            "default_security_group_id": "sg-0575af612403d5875",
            "dhcp_options_id": "dopt-fde1389b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09a593fff122fb81c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-081f3180a27ecf382",
            "owner_id": "147876441483",
            "tags": {
              "Name": "myvpc"
            },
            "tags_all": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}